# omniem-package

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: api.md  cli.md
examples/: 2d_MitoEM_H_0_0_0.tif  3d_AxonEM-H-0-0-0_0_0_0.tif  gly-z=0.tif
omniem/: __init__.py  _extras.py  _pipeline.py  cli.py  errors.py  prepared.py
omniem/config/: __init__.py  base.py  model.py
omniem/encoders/: __init__.py  base.py  registry.py
omniem/encoders/dinov2/: __init__.py  backbone.py  build.py  forward.py
omniem/models/: __init__.py  adapter.py  base.py  omniemv1_net.py  output.py  registry.py  upsample.py
scripts/: build_docs.sh
